fix card overflow from fixed height css

--- a/force-app/main/default/aura/EinsteinDataset/EinsteinDataset.css
+++ b/force-app/main/default/aura/EinsteinDataset/EinsteinDataset.css
@@ -1,5 +1,5 @@
 .THIS {
-    height: 320px;
+    /* height: 320px; */
 }
 
 .THIS .slds-card__body {
